# slamcore-ros1-examples

./: .docker-compose.yml  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  install-debs.sh  repos.yaml
src/ros1_examples/: CMakeLists.txt  package.xml
src/ros1_examples/config/: slam-config.json  template_config.sh
src/ros1_examples/config/common/: obstacle_avoidance_laser.yaml  obstacle_avoidance_pointcloud.yaml
src/ros1_examples/config/kobuki/: common_costmap.yaml  global_costmap.yaml  local_costmap.yaml
src/ros1_examples/descriptions/: _d435.urdf.xacro  plates.urdf.xacro  slamcore-kobuki.urdf.xacro
src/ros1_examples/launch/: kobuki_live_navigation.launch  kobuki_live_teleop_joy.launch  navigation_monitoring_slamcore.launch
src/ros1_examples/launch/common/: setup_move_base.launch
src/ros1_examples/launch/kobuki/: setup_live.launch
src/ros1_examples/launch/utils/: view_model.launch
src/ros1_examples/meshes/: LICENSE  d435i_mount.stl
src/ros1_examples/rviz/: slamcore_nav.rviz
src/ros1_examples/scripts/: pose_estimation_frame_pub.py
src/ros1_examples/src/: kobuki_joystick.cpp
src/ros_demos/: CMakeLists.txt  package.xml
src/ros_demos/config/: template_config.sh
src/ros_demos/config/common/: obstacle_avoidance_pointcloud.yaml
src/ros_demos/config/kobuki/: common_costmap.yaml  global_costmap.yaml  global_planner.yaml  local_costmap.yaml
src/ros_demos/descriptions/: _d435.urdf.xacro  slamcore-kobuki.urdf.xacro
src/ros_demos/launch/: kobuki_live_navigation.launch  kobuki_live_teleop_key.launch  navigation_monitoring_slamcore.launch
src/ros_demos/launch/common/: setup_move_base.launch  setup_realsense_obstacle_avoidance.launch
src/ros_demos/launch/kobuki/: setup_live.launch
src/ros_demos/launch/utils/: view_model.launch
src/ros_demos/rqt/: slamcore_nav.perspective
src/ros_demos/rviz/: model.rviz  slamcore_nav.rviz
src/ros_demos/scripts/: stop_motion.sh
src/slamcore_ros1_examples/: CMakeLists.txt  package.xml
src/slamcore_ros1_examples/config/: slam-config.json  template_config.sh
src/slamcore_ros1_examples/config/kobuki/: common_costmap.yaml  local_costmap.yaml  local_planner.yaml
src/slamcore_ros1_examples/descriptions/: _d435.urdf.xacro  plates.urdf.xacro  slamcore-kobuki.urdf.xacro
src/slamcore_ros1_examples/include/slamcore_ros1_examples/: kobuki_joystick.h
src/slamcore_ros1_examples/launch/: kobuki_live_navigation.launch  kobuki_live_teleop_joy.launch  kobuki_live_teleop_key.launch  navigation_monitoring_slamcore.launch
src/slamcore_ros1_examples/launch/common/: setup_move_base.launch  setup_waypoint_nav.launch
src/slamcore_ros1_examples/launch/utils/: view_model.launch
src/slamcore_ros1_examples/meshes/: L10_standoff.stl  L50_standoff.stl  bottom_plate.stl  middle_plate.stl  top_plate.stl
src/slamcore_ros1_examples/rviz/: model.rviz  slamcore_nav.rviz
src/slamcore_ros1_examples/src/: kobuki_joystick.cpp
